--- a/synapsis/src/main/resources/templates/pages/messagingPage.html
+++ b/synapsis/src/main/resources/templates/pages/messagingPage.html
@@ -2,12 +2,18 @@
 <html xmlns:th="http://thymeleaf.org" xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="_layout">
 <div layout:fragment="content">
+
+<!--    <div class="langEN">-->
     <div class="container flex flex-wrap pb-28 mb-72">
         <div class="w-11/12 ml-16 shadow-lg rounded-lg h-[60rem]  overflow-y-scroll">
             <!-- header -->
             <div class="px-5 py-5 flex justify-between items-center bg-white border-b-2">
-                <div class="font-semibold text-2xl">
+
+                <div class="langEN font-semibold text-2xl">
                     Your Connections
+                </div>
+                <div class="langFR font-semibold text-2xl">
+                    Vos Connexions
                 </div>
             </div>
             <!-- end header -->
@@ -16,7 +22,7 @@
 
                 <div class="flex-none w-1/3 border-r-2">
                     <div  th:if="${chats.size() != 0}"  th:each="chat: ${chats}"
-                         class="w-11/12 h-[8rem]  mt-5 ml-7 bg-neutral-100  border-gray-200 rounded-lg shadow">
+                          class="w-11/12 h-[8rem]  mt-5 ml-7 bg-neutral-100  border-gray-200 rounded-lg shadow">
                         <a th:href="@{/chat/{id}(id=${chat.id})}" class="flex pl-8 pt-12">
                             <img class=" w-[60px] h-[60px] rounded-t-2xl" src="/assets/default_user.svg">
                             <div>
@@ -28,7 +34,7 @@
                 </div>
 
                 <div class="container flex flex-wrap w-2/3">
-                        <p th:if="${reportStatus != null}" th:text="${reportStatus}"></p>
+                    <p th:if="${reportStatus != null}" th:text="${reportStatus}"></p>
 
                     <div id="chat-page" class=" relative flex-none w-full">
                         <p id="chatUser" th:text="${chatUser}"
@@ -40,63 +46,90 @@
                                     Connecting...
                                 </div>
 
-            <ul id="messageArea">
-                <li th:each="message : ${messages}" class="flex">
-                    <div class="flex flex-col w-full">
-                        <th:block th:if="${message.fileName != null and message.file != null}">
-                            <img th:if="${message.fileName.toLowerCase().matches('.*\.(png|jpe?g|gif|bmp)')}" th:src="${message.file}" th:alt="${message.fileName}" />
-                            <a th:unless="${message.fileName.toLowerCase().matches('.*\.(png|jpe?g|gif|bmp)')}" th:href="@{/downloadFile/{messageId}(messageId=${message.id})}" th:download="${message.fileName}" th:text="'Download ' + ${message.fileName}"></a>
-                        </th:block>
-                        <!--Messages sent by user-->
-                        <div th:if="${message.getSender().getId() == globalUserId}"
-                             class="p-2 px-4 m-2 ml-96 bg-primary-variant rounded-lg text-right w-1/2 flex flex-row-reverse">
-                            <p th:text="${message.getContent()}"></p>
-                        </div>
-
-                        <!--Messages received by user-->
-                        <div th:if="${message.getSender().getId() != globalUserId}"
-                             class="p-2 px-2 m-2 bg-neutral-100 rounded-lg w-1/2 flex flex-row">
-                            <i class="fa-solid fa-ellipsis-vertical fa-sm p-3 px-4" style="color: #c0c0c0;"
-                               data-popover-target="popover-click" data-popover-trigger="click" type="button"></i>
-                            <div data-popover id="popover-click" role="tooltip"
-                                 class="absolute z-10 invisible inline-block w-18 text-sm text-black-variant transition-opacity
-                                     duration-300 bg-primary-variant border border-light rounded-lg opacity-0">
-                                <div class="px-3 py-2 bg-primary-variant border-light rounded-t-lg" data-modal-target="popup-modal" data-modal-toggle="popup-modal">
-                                    <h3 class="font-semibold text-black-variant">Report</h3>
-                                </div>
-                                <div data-popper-arrow></div>
-                            </div>
-                            <p th:text="${message.getContent()}"></p>
-                        </div>
-                        <form th:if="${message.getSender().getId() != authenticatedUserID}" th:action="@{/chat/report}" method="POST">
-                            <input type="hidden" name="messageID" th:value="${message.getId()}" />
-                            <input type="hidden" name="chatID" th:value="${chatId}" />
-                            <div id="popup-modal" tabindex="-1" class="fixed top-0 left-0 right-0 z-50 hidden p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] md:h-full">
-                                <div class="relative w-full h-full max-w-md md:h-auto">
-                                    <div class="relative bg-white rounded-lg">
-                                        <button type="button" class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center" data-modal-hide="popup-modal">
-                                            <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-                                            <span class="sr-only">Close modal</span>
-                                        </button>
-                                        <div class="p-6 text-center">
-                                            <svg aria-hidden="true" class="mx-auto mb-4 text-gray-400 w-14 h-14 " fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-                                            <p class="mb-5 text-lg font-normal text-gray-500 ">Please note that if you choose to report a message for harassment, up to 5 previous messages from the same conversation will
-                                                be reviewed by our administrative team in order to assess the situation fully. This is to ensure that appropriate action is taken and that any patterns of behavior are identified.
-                                                We take harassment very seriously and aim to create a safe and respectful environment for all of our users.
-                                                By reporting a message, you are helping us to achieve this goal.</p>
-                                            <button data-modal-hide="popup-modal" type="submit" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300  font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-2">
-                                                I accept
-                                            </button>
-                                            <button data-modal-hide="popup-modal" type="button" class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10">I decline</button>
+                                <ul id="messageArea">
+                                    <li th:each="message : ${messages}" class="flex">
+                                        <div class="flex flex-col w-full">
+                                            <div class="langEN">
+                                            <th:block th:if="${message.fileName != null and message.file != null}">
+                                                <img th:if="${message.fileName.toLowerCase().matches('.*\.(png|jpe?g|gif|bmp)')}" th:src="${message.file}" th:alt="${message.fileName}" />
+                                                <a th:unless="${message.fileName.toLowerCase().matches('.*\.(png|jpe?g|gif|bmp)')}" th:href="@{/downloadFile/{messageId}(messageId=${message.id})}" th:download="${message.fileName}" th:text="'Download ' + ${message.fileName}"></a>
+                                            </th:block>
                                         </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
 
-                </li>
+                                            <!--Messages sent by user-->
+                                            <div th:if="${message.getSender().getId() == globalUserId}"
+                                                 class="p-2 px-4 m-2 ml-96 bg-primary-variant rounded-lg text-right w-1/2 flex flex-row-reverse">
+                                                <p th:text="${message.getContent()}"></p>
+                                            </div>
 
-            </ul>
+                                            <!--Messages received by user-->
+                                            <div th:if="${message.getSender().getId() != globalUserId}"
+                                                 class="p-2 px-2 m-2 bg-neutral-100 rounded-lg w-1/2 flex flex-row">
+                                                <i class="fa-solid fa-ellipsis-vertical fa-sm p-3 px-4" style="color: #c0c0c0;"
+                                                   data-popover-target="popover-click" data-popover-trigger="click" type="button"></i>
+                                                <div data-popover id="popover-click" role="tooltip"
+                                                     class="absolute z-10 invisible inline-block w-18 text-sm text-black-variant transition-opacity
+                                     duration-300 bg-primary-variant border border-light rounded-lg opacity-0">
+                                                    <div class="px-3 py-2 bg-primary-variant border-light rounded-t-lg" data-modal-target="popup-modal" data-modal-toggle="popup-modal">
+                                                        <h3 class="langEN font-semibold text-black-variant">Report</h3>
+                                                        <h3 class="langFR font-semibold text-black-variant">Signaler</h3>
+
+                                                    </div>
+                                                    <div data-popper-arrow></div>
+                                                </div>
+                                                <p th:text="${message.getContent()}"></p>
+                                            </div>
+                                            <form th:if="${message.getSender().getId() != authenticatedUserID}" th:action="@{/chat/report}" method="POST">
+                                                <input type="hidden" name="messageID" th:value="${message.getId()}" />
+                                                <input type="hidden" name="chatID" th:value="${chatId}" />
+                                                <div id="popup-modal" tabindex="-1" class="fixed top-0 left-0 right-0 z-50 hidden p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] md:h-full">
+                                                    <div class="relative w-full h-full max-w-md md:h-auto">
+                                                        <div class="relative bg-white rounded-lg">
+                                                            <button type="button" class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center" data-modal-hide="popup-modal">
+                                                                <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                                                                <span class="sr-only">Close modal</span>
+                                                            </button>
+                                                            <div class="p-6 text-center">
+                                                                <svg aria-hidden="true" class="mx-auto mb-4 text-gray-400 w-14 h-14 " fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                                                                <p class="langEN mb-5 text-lg font-normal text-gray-500 ">Please note that if you choose to report a message for harassment, up to 5 previous messages from the same conversation will
+                                                                    be reviewed by our administrative team in order to assess the situation fully. This is to ensure that appropriate action is taken and that any patterns of behavior are identified.
+                                                                    We take harassment very seriously and aim to create a safe and respectful environment for all of our users.
+                                                                    By reporting a message, you are helping us to achieve this goal.</p>
+                                                                <p class="langFR mb-5 text-lg font-normal text-gray-500 ">Veuillez noter que si vous choisissez de signaler un message à cause d'un harcèlement, jusqu'à 5 messages précédents de la même conversation seront
+                                                                    examiné par notre équipe administrative afin d'évaluer pleinement la situation. Il s'agit de s'assurer que des mesures appropriées sont prises et que tous les modèles de comportement sont identifiés.
+                                                                    Nous prenons le harcèlement très au sérieux et visons à créer un environnement sécurisé et respectueux pour tous nos utilisateurs.
+                                                                    En signalant un message, vous nous aidez à atteindre notre objectif.</p>
+
+
+
+                                                                <div class="langEN">
+                                                                <button data-modal-hide="popup-modal" type="submit" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300  font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-2">
+                                                                    I accept
+                                                                </button>
+                                                                <button data-modal-hide="popup-modal" type="button" class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10">
+                                                                    I decline
+                                                                </button>
+                                                                </div>
+
+                                                                <div class="langFR">
+                                                                    <button data-modal-hide="popup-modal" type="submit" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300  font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-2">
+                                                                        J'accepte
+                                                                    </button>
+                                                                    <button data-modal-hide="popup-modal" type="button" class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10">
+                                                                        Je refuse
+                                                                    </button>
+                                                                </div>
+
+
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </form>
+
+                                    </li>
+
+                                </ul>
 
                             </div>
                         </div>
@@ -109,17 +142,17 @@
 
                                 <input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control w-96 mt-10 rounded-lg"/>
                                 <input type="file" id="file" name="file" class="rounded-lg"/>
-                                <button type="submit" class="btn bg-primary btn-primary font-sans w-28 h-8 p-0 ml-14">Send</button>
+                                <button type="submit" class="langEN btn bg-primary btn-primary font-sans w-28 h-8 p-0 ml-14">Send</button>
+                                <button type="submit" class="langFR btn bg-primary btn-primary font-sans w-28 h-8 p-0 ml-14">Envoyer</button>
 
                             </form>
                         </div>
                     </div>
                 </div>
-                </div>
-                        <script src="/js/main.js"></script>
-         </div>
+            </div>
+            <script src="/js/main.js"></script>
         </div>
     </div>
-
+</div>
 </div>
 </html>
